# test_task

./: .clang-format  CMakeLists.txt  README.md  build.sh  computer_club.cpp  computer_club.h  event_manager.h  main.cpp  run.sh  run_tests.sh  util_structs.h
src/: CMakeLists.txt  computer_club.cpp  computer_club.h  main.cpp  util_structs.cpp
tests/: CMakeLists.txt  club_test.cpp
tests/test_data/: errors_in  errors_out  format1  format2  format3
